# llm-trust-guard-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RESEARCH_LOG.md  VERIFICATION.md  freshness.json  pyproject.toml
.githooks/: commit-msg  post-checkout  post-commit  post-merge  pre-push
.github/workflows/: ci.yml  freshness.yml  release.yml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
examples/: fastapi_secure_llm.py  langchain_secure_rag.py
scripts/: check-freshness.py  install-hooks.sh  verify.sh
specs/001-guard-adversarial-hardening/: plan.md  spec.md  tasks.md
specs/001-guard-adversarial-hardening/checklists/: requirements.md
src/llm_trust_guard/: __init__.py  decode_variants.py  detection_backend.py  trust_guard.py
src/llm_trust_guard/guards/: agent_communication_guard.py  agent_skill_guard.py  autonomy_escalation_guard.py  circuit_breaker.py  code_execution_guard.py  compression_detector.py  context_budget_guard.py  conversation_guard.py  delegation_scope_guard.py  drift_detector.py  encoding_detector.py  execution_monitor.py  external_data_guard.py  heuristic_analyzer.py  input_sanitizer.py  mcp_security_guard.py  memory_guard.py  multimodal_guard.py  output_filter.py  output_guard.py  output_schema_guard.py  policy_gate.py  prompt_leakage_guard.py  rag_guard.py  schema_validator.py  session_integrity_guard.py  spawn_policy_guard.py  state_persistence_guard.py  tenant_boundary.py  token_cost_guard.py  tool_chain_validator.py  tool_registry.py  tool_result_guard.py  trust_exploitation_guard.py  trust_transitivity_guard.py
src/llm_trust_guard/integrations/: __init__.py  fastapi_integration.py  langchain_integration.py  openai_integration.py
tests/: guard-parity-vectors.json  parity-vectors.json  test_agent_skill_guard.py  test_autonomy_escalation_guard.py  test_benign_context.py  test_circuit_breaker.py  test_code_execution_ast.py  test_code_execution_guard.py  test_compression_detector.py  test_context_budget_guard.py  test_conversation_guard.py  test_decode_variants.py  test_delegation_scope_guard.py  test_detection_backend.py  test_drift_detector.py  test_encoding_detector.py  test_execution_monitor.py  test_external_data_guard.py  test_false_positives.py  test_guard_parity.py  test_heuristic_analyzer.py  test_input_sanitizer.py  test_mcp_security_guard.py  test_memory_guard.py  test_multimodal_guard.py  test_output_filter.py  test_output_guard.py  test_output_schema_guard.py  test_parity.py  test_policy_gate.py  test_prompt_leakage_guard.py  test_rag_guard.py  test_redos_safety.py  test_schema_validator.py  test_session_integrity_guard.py  test_spawn_policy_guard.py  test_state_persistence_guard.py  test_tenant_boundary.py  test_token_cost_guard.py  test_tool_chain_validator.py  (+4 more)
tests/adversarial/: RESULTS-v0.10.2.md  RESULTS-v0.10.3.md  RESULTS-v0.10.4.md  RESULTS-v0.11.0.md  RESULTS-v0.12.0.md  RESULTS-v0.13.0.md  RESULTS-v0.14.0.md  RESULTS-v0.15.0.md  RESULTS-v0.16.0.md  RESULTS-v0.17.0.md  RESULTS-v0.18.0.md  RESULTS-v0.19.0.md  RESULTS-v0.20.0.md  RESULTS-v0.21.0.md  RESULTS-v0.21.1.md  RESULTS-v0.21.2.md  RESULTS-v0.21.3.md  RESULTS-v0.21.4.md  RESULTS-v0.21.5.md  RESULTS-v0.21.6.md  datasets  improvement-inputs.md  recall-baseline.json  test_adversarial_benchmark.py  test_large_scale_benchmark.py  test_real_dataset_benchmark.py
