[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "llm-trust-guard"
version = "0.17.0"
description = "Security guards for LLM-powered and agentic AI applications. 35 guards, zero dependencies. Covers OWASP Top 10 for LLMs 2025 and Agentic Applications 2026."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    {name = "Nandakishore Leburu"},
]
keywords = [
    "llm", "security", "prompt-injection", "guardrails", "ai-safety",
    "owasp", "trust", "agentic-ai", "mcp", "rag",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/nandakishoreleburu/llm-trust-guard"
Documentation = "https://github.com/nandakishoreleburu/llm-trust-guard"
Repository = "https://github.com/nandakishoreleburu/llm-trust-guard"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_trust_guard"]

[tool.hatch.build.targets.sdist]
exclude = ["tests/adversarial"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Coverage floor enforced by scripts/verify.sh (G4). Current measured coverage is
# ~74%; the floor is set below that with margin so it catches real regressions
# without flaking across Python 3.9–3.13. Raise it as coverage improves.
[tool.coverage.report]
fail_under = 70
